<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.labs.MainActivity">

    <Button
        android:text="@string/Lab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLab1"
        android:onClick="OnClick"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="28dp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/buttonLab2" />

    <Button
        android:text="@string/Lab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnClick"
        android:id="@+id/buttonLab2"
        android:layout_alignBaseline="@+id/buttonLab1"
        android:layout_alignBottom="@+id/buttonLab1"
        android:layout_alignStart="@+id/buttonLab4" />

    <Button
        android:text="@string/Lab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLab3"
        android:onClick="OnClick"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/buttonLab2"
        android:layout_alignStart="@+id/buttonLab1" />

    <Button
        android:text="@string/Lab4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLab4"
        android:onClick="OnClick"
        android:layout_marginEnd="70dp"
        android:layout_alignBaseline="@+id/buttonLab3"
        android:layout_alignBottom="@+id/buttonLab3"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/Lab5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnClick"
        android:layout_below="@+id/buttonLab4"
        android:layout_alignEnd="@+id/buttonLab3"
        android:layout_marginTop="24dp"
        android:id="@+id/buttonLab5" />

    <Button
        android:text="@string/Lab6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnClick"
        android:id="@+id/buttonLab6"
        android:layout_alignBaseline="@+id/buttonLab5"
        android:layout_alignBottom="@+id/buttonLab5"
        android:layout_alignStart="@+id/buttonLab4" />

    <Button
        android:text="@string/Lab7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnClick"
        android:layout_marginTop="27dp"
        android:id="@+id/buttonLab7"
        android:layout_below="@+id/buttonLab5"
        android:layout_alignStart="@+id/buttonLab5" />

    <Button
        android:text="@string/Lab8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnClick"
        android:id="@+id/Lab8"
        android:layout_alignBaseline="@+id/buttonLab7"
        android:layout_alignBottom="@+id/buttonLab7"
        android:layout_alignStart="@+id/buttonLab6" />

</RelativeLayout>
