<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lab2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.labs.Lab2Activity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:ems="10"
        android:id="@+id/editTextName"
        android:hint="@string/name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:ems="10"
        android:id="@+id/editTextPatronymic"
        android:hint="@string/patronymic"
        android:layout_below="@+id/editTextName"
        android:layout_alignStart="@+id/editTextName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:ems="10"
        android:id="@+id/editTextSurname"
        android:hint="@string/surname"
        android:layout_below="@+id/editTextPatronymic"
        android:layout_alignStart="@+id/editTextPatronymic" />

    <TextView
        android:text="@string/faculty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_below="@+id/editTextSurname"
        android:layout_alignStart="@+id/editTextSurname" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/faculties"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignEnd="@+id/editTextSurname" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editTextGroup"
        android:hint="@string/group"
        android:layout_below="@+id/spinner"
        android:layout_alignStart="@+id/spinner" />

    <Button
        android:text="@string/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBlue"
        android:onClick="onClick"
        android:layout_below="@+id/editTextGroup"
        android:layout_alignStart="@+id/editTextGroup"
        android:layout_alignEnd="@+id/editTextGroup" />

</RelativeLayout>
