<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lab3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.user.labs.Lab3Activity"
    android:background="@android:color/background_light"
    >

    <Button
        android:text="@string/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRed"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="onRedBottonClick" />

    <Button
        android:text="@string/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/buttonGreen"
        android:layout_below="@+id/buttonRed"
        android:layout_alignStart="@+id/buttonRed"
        android:onClick="onGreenBottonClick" />

    <Button
        android:text="@string/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/buttonBlue"
        android:layout_below="@+id/buttonGreen"
        android:layout_alignStart="@+id/buttonGreen"
        android:layout_centerHorizontal="true"
        android:onClick="onBlueBottonClick" />

    <Button
        android:text="@string/yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonYellow"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/buttonBlue"
        android:layout_alignStart="@+id/buttonBlue"
        android:layout_centerHorizontal="true"
        android:onClick="onYellowBottonClick" />

    <Button
        android:text="@string/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonImg"
        android:layout_marginTop="18dp"
        style="@style/img"
        android:layout_below="@+id/buttonYellow"
        android:layout_alignStart="@+id/buttonYellow"
        android:onClick="onImgBottonClick" />

</RelativeLayout>